# ecmascript

./: CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  vcpkg.json
.github/workflows/: ci.yaml
src/: CMakeLists.txt
src/ecmascript/: ecmascript.h
src/ecmascript/json/: json.cpp  json.hpp
tests/: CMakeLists.txt
tests/json/: null.cpp
